fix overflow scrolling on the book page

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -57,11 +57,22 @@ body {
     margin-bottom: 10px;
     padding-bottom: 5px;
   }
+  #mainNavbar {
+    overflow-y:auto;
+  }
+
+  .bookScroll {
+    overflow-y: auto;
+  }
 }
 
 @media only screen and (min-width: 768px) {
   .bookHeight {
     max-height: 150px;
+  }
+
+  .bookReviews {
+    overflow-y: auto;
   }
 
   .bottomBorder {
@@ -70,6 +81,9 @@ body {
     border-width: 0 0 1px 0;
     margin-bottom: 10px;
     padding-bottom: 10px;
+  }
+  .bookFlex {
+    display: flex;
   }
 }
 
